# Slackproject

./: CMakeLists.txt  README.md  main.cpp  simple.cpp
simpleSocket/: CMakeLists.txt
slacklib/: CMakeLists.txt  slack.cpp  slack.h
slacklib/circularBuffer/: CMakeLists.txt  circularBuffer.cpp  circularBuffer.h
